Bài 97. Xây dựng UI phần Header #2

--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -18,10 +18,14 @@ $searchIconColor: rgba(22, 24, 35, 0.34);
 }
 
 // Search
+.search,
+.search-result {
+    width: 500px;
+}
+
 .search {
     display: flex;
     align-items: center;
-    width: 500px;
     height: $searchHeight;
     padding-inline: 16px;
     background: rgba(22, 24, 35, 0.06);
@@ -86,6 +90,15 @@ input:not(:placeholder-shown) ~ .search-btn {
     cursor: pointer;
 }
 
+.search-title {
+    height: 30px;
+    padding: 5px 12px;
+    font-size: 1.4rem;
+    line-height: 18px;
+    font-weight: 600;
+    color: rgba(22, 24, 35, 0.5);
+    user-select: none;
+}
 // Actions
 .actions {
     width: 328px;
