Bài 98. Xây dựng UI phần Header #3

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -4,6 +4,7 @@
     --primary: rgb(254, 44, 85);
     --text-color: rgb(22, 24, 35);
     --font-family: 'TikTokFont';
+    --white: rgb(255, 255, 255);
 }
 
 * {
@@ -59,7 +60,7 @@ button {
     background-color: transparent;
 }
 
-a[href] {
+a {
     color: var(--text-color);
     text-decoration: none;
 }
