--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -122,3 +122,10 @@ input:not(:placeholder-shown) ~ .search-btn {
         background-color: rgba(22, 24, 35, 0.03);
     }
 }
+
+.menu-btn {
+    line-height: 0;
+    padding: 0 4px;
+    margin-left: 16px;
+    cursor: pointer;
+}
