--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -129,3 +129,40 @@ input:not(:placeholder-shown) ~ .search-btn {
     margin-left: 16px;
     cursor: pointer;
 }
+
+.actions-btn {
+    margin-left: 16px;
+    cursor: pointer;
+    height: 32px;
+    position: relative;
+}
+
+.user-avatar {
+    width: 32px;
+    height: 32px;
+    margin-left: 24px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.message-btn {
+    padding: 3px 3px 0px;
+}
+
+.sup-badge {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: -20%;
+    left: 16px;
+    min-width: 20px;
+    height: 20px;
+    font-family: 'TikTokFont';
+    font-size: 1.4rem;
+    font-weight: 600;
+    line-height: 18px;
+    border-radius: 10px;
+    color: var(--white);
+    background-color: var(--primary);
+}
