Bài 108. Sửa lỗi và hoàn thiện phần Header #2

--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,12 +1,15 @@
-$headerHeight: 60px;
-
 .wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: $headerHeight;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: var(--default-layout-header-height);
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 1px;
     padding: 0 24px 0 16px;
+    background-color: var(--white);
 }
 
 .logo {
