--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,8 +3,11 @@
 :root {
     --primary: rgb(254, 44, 85);
     --text-color: rgb(22, 24, 35);
+    --text-color-secondary: rgba(22, 24, 35, 0.75);
     --font-family: 'TikTokFont';
     --white: rgb(255, 255, 255);
+    --sub-title: rgba(22, 24, 35, 0.5);
+    --hover-color: rgba(22, 24, 35, 0.03);
 
     // Default layout
     --default-layout-header-height: 60px;
@@ -33,26 +36,14 @@ html ::-webkit-scrollbar {
     border-radius: 0px;
     width: 8px;
 }
-html *::-webkit-scrollbar {
-    border-radius: 0;
-    width: 8px;
-}
 
 html ::-webkit-scrollbar-thumb {
-    border-radius: 4px;
-    background-color: rgba(22, 24, 35, 0.06);
-}
-html *::-webkit-scrollbar-thumb {
     border-radius: 4px;
     background-color: rgba(22, 24, 35, 0.06);
 }
 
 html ::-webkit-scrollbar-track {
     border-radius: 0px;
-    background-color: rgba(0, 0, 0, 0);
-}
-html *::-webkit-scrollbar-track {
-    border-radius: 0;
     background-color: rgba(0, 0, 0, 0);
 }
 
@@ -86,10 +77,8 @@ button,
 [tabindex] {
     border: none;
     outline: none;
-}
-
-button {
     background-color: transparent;
+    color: var(--text-color);
 }
 
 a {
