--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -23,7 +23,7 @@
     line-height: 21px;
 
     &:hover {
-        background-color: rgba(22, 24, 35, 0.03);
+        background-color: var(--hover-color);
     }
 
     &.separate {
