--- a/src/layouts/components/Sidebar/Menu/Menu.module.scss
+++ b/src/layouts/components/Sidebar/Menu/Menu.module.scss
@@ -6,7 +6,7 @@
     transition: background-color 200ms ease-in-out 0s;
 
     &:hover {
-        background-color: rgba(22, 24, 35, 0.03);
+        background-color: var(--hover-color);
     }
 
     &.active {
