Bài 117: Xây dựng UI phần xem video #1 AND Bài 118: Xây dựng logic phần xem video #1

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -77,8 +77,12 @@ button,
 [tabindex] {
     border: none;
     outline: none;
-    background-color: transparent;
     color: var(--text-color);
+}
+
+input,
+button {
+    background-color: transparent;
 }
 
 a {
